# magic-elect

./: .gitignore  Anchor.toml  Cargo.toml  README.md  create-codama-client.ts  package.json
programs/election/: Cargo.toml
programs/election/src/: errors.rs  lib.rs  structs.rs
tests/: magice.ts
