[workspace]
members = [
    "programs/*",
    "clients/rust",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31.1"
ephemeral-rollups-sdk = "0.6"
magicblock-permission-client = { path = "crates/permission-client" }
session-keys = { path = "crates/session-keys" }